[project]
name = "neptune-exporter"
version = "0.1.0"
description = "A tool to export Neptune experiment data to a file or other services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.4.0",
    "neptune>=1.14.0",
    "neptune-query>=1.5.1",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "neptune-scale==0.27.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[project.scripts]
neptune-exporter = "neptune_exporter.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
mypy_path = './src/'
packages = 'neptune_exporter'
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = "-s"
